--- a/starter_code.ipynb
+++ b/starter_code.ipynb
@@ -416,7 +416,7 @@
     "df=df.drop(\"show_id\",axis=1)\n",
     "df.head()\n",
     "\n",
-    "#also i think we dont need cast?  whats the point :)   OR duration ??? or both\n",
+    "#also i think we dont need cast?  whats the point :)   OR duration and description ??? or all\n",
     "#df=df.drop(\"show_id\",\"cast\",axis=1)\n",
     "\n",
     "#  THEN AFTER WE FIND ONE MORE CVS WE CAN MERGE IT !!!"
